<resources>
    <string name="app_name">Assignment 2</string>
    <string name="first_name_input">First Name…</string>
    <string name="family_name_input">Family Name…</string>
    <string name="nickname_input">Nickname…</string>
    <string name="age_input">Age…</string>
    <string name="submit_form_button">Start Quiz</string>
    <string name="form_header_text">Personal Information Form</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_placeholder">Question goes here…</string>
    <string name="next_question_button">Next Question</string>
    <string name="result_text_label">Your last score:</string>
</resources>
