<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.FormActivity">
    <TextView
            android:text="@string/form_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/formHeaderText" android:textColor="#000"
            android:textStyle="bold" android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/form_margins"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstNameInput"
            android:hint="@string/first_name_input"
            app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/form_margins" app:layout_constraintTop_toBottomOf="@+id/formHeaderText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/familyNameInput"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput" android:hint="@string/family_name_input"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_margin="@dimen/form_margins"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nicknameInput"
            app:layout_constraintTop_toBottomOf="@+id/familyNameInput" android:hint="@string/nickname_input"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_margin="@dimen/form_margins"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ageInput" app:layout_constraintTop_toBottomOf="@+id/nicknameInput"
            android:hint="@string/age_input" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/form_margins" android:inputType="number"/>
    <Button
            android:text="@string/submit_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/submitFormButton"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/ageInput"
            android:layout_margin="@dimen/form_margins" android:textSize="@dimen/button_text_size"/>
    <View
            android:id="@+id/verticalDivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toRightOf="@+id/resultTextValue"
            app:layout_constraintRight_toLeftOf="@+id/submitFormButton"
            app:layout_constraintTop_toTopOf="@+id/submitFormButton"
            app:layout_constraintBottom_toBottomOf="@+id/submitFormButton" android:visibility="invisible"/>
    <TextView
            android:text="@string/result_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resultTextLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="@dimen/form_margins" android:textSize="@dimen/result_size" android:textColor="#000"
            app:layout_constraintTop_toTopOf="@+id/submitFormButton"
            app:layout_constraintBottom_toBottomOf="@+id/submitFormButton" android:visibility="invisible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resultTextValue"
            app:layout_constraintLeft_toRightOf="@+id/resultTextLabel"
            android:layout_margin="@dimen/form_margins"
            android:textSize="@dimen/result_size"
            android:textColor="#000" app:layout_constraintBottom_toBottomOf="@+id/submitFormButton"
            app:layout_constraintTop_toTopOf="@+id/submitFormButton" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>